--- a/packages/ibm-products-styles/src/components/NotificationsPanel/_notifications-panel.scss
+++ b/packages/ibm-products-styles/src/components/NotificationsPanel/_notifications-panel.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2020, 2021
+// Copyright IBM Corp. 2020, 2025
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -7,7 +7,6 @@
 
 // Standard imports.
 @use '@carbon/styles/scss/theme' as *;
-@use '@carbon/styles/scss/themes' as *;
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/motion' as *;
 @use '@carbon/styles/scss/type';
@@ -20,11 +19,13 @@
 @use '../EmptyStates/empty-state';
 
 $block-class: #{c4p-settings.$pkg-prefix}--notifications-panel;
+$block-size: 38.5rem;
+
 @keyframes fade-in {
   0% {
     opacity: 0;
     // stylelint-disable-next-line carbon/layout-use
-    transform: translateY(-38.5rem); // the height of the notification panel
+    transform: translateY(-$block-size); // the height of the notification panel
   }
 
   100% {
@@ -42,7 +43,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--notifications-panel;
   100% {
     opacity: 0;
     // stylelint-disable-next-line carbon/layout-use
-    transform: translateY(-38.5rem); // the height of the notification panel
+    transform: translateY(-$block-size); // the height of the notification panel
   }
 }
 .#{$block-class}__entrance {
@@ -60,18 +61,19 @@ $block-class: #{c4p-settings.$pkg-prefix}--notifications-panel;
 }
 
 .#{$block-class}__container {
-  @include theme($g100);
-
   position: fixed;
   z-index: 2;
   overflow: auto;
-  background-color: $background;
+  background-color: $layer-01;
+  border-block-end: 1px solid $border-subtle-02;
+  border-inline-start: 1px solid $border-subtle-02;
+  box-shadow: 0 $spacing-01 $spacing-02 $overlay;
   color: $text-primary;
   inset-block-start: $spacing-09;
   inset-inline-end: 0;
-  max-block-size: 38.5rem;
+  max-block-size: $block-size;
   max-inline-size: 22.75rem;
-  min-block-size: 38.5rem;
+  min-block-size: $block-size;
   min-inline-size: 20rem;
   transition: transform $duration-fast-02 motion(standard);
 
@@ -79,8 +81,8 @@ $block-class: #{c4p-settings.$pkg-prefix}--notifications-panel;
     position: sticky;
     z-index: 2;
     padding: $spacing-03 $spacing-05 $spacing-05;
-    background-color: $background;
-    border-block-end: 1px solid $layer-02;
+    background-color: $layer-01;
+    border-block-end: 1px solid $border-subtle-01;
     inset-block-start: 0;
     .#{$block-class}__header-flex {
       display: flex;
@@ -132,19 +134,19 @@ $block-class: #{c4p-settings.$pkg-prefix}--notifications-panel;
     align-items: flex-start;
     padding: $spacing-05;
     border: 0;
-    background-color: $background;
+    background-color: $layer-01;
     cursor: pointer;
     inline-size: 100%;
     min-block-size: 6.25rem;
     text-align: start;
     transition: background-color $duration-moderate-02 motion(standard);
     .#{$block-class}__notification-title {
-      color: $text-on-color;
+      color: $text-secondary;
       margin-block-end: $spacing-02;
       @include font-weight('regular');
     }
     .#{$block-class}__notification-title.#{$block-class}__notification-title-unread {
-      color: $text-on-color;
+      color: $text-secondary;
       margin-block-end: $spacing-02;
       @include font-weight('semibold');
     }
@@ -248,7 +250,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--notifications-panel;
   .#{$block-class}__notification-previous:not(:first-of-type):before {
     position: absolute;
     margin: 0 auto;
-    background-color: $layer-02;
+    background-color: $border-subtle-01;
     block-size: 1px;
     content: '';
     inline-size: calc(100% - (2 * #{$spacing-05}));
@@ -282,16 +284,16 @@ $block-class: #{c4p-settings.$pkg-prefix}--notifications-panel;
     z-index: 2;
     display: flex;
     align-items: center;
-    background-color: $background;
+    background-color: $layer-01;
     block-size: 2.5rem;
-    border-block-start: 1px solid $layer-02;
+    border-block-start: 1px solid $border-subtle-01;
     inset-block-end: 0;
     min-block-size: 2.5rem;
     .#{$block-class}__view-all-button {
       display: flex;
       align-items: center;
       block-size: 2.5rem;
-      border-inline-end: 1px solid $layer-02;
+      border-inline-end: 1px solid $border-subtle-01;
       color: $text-primary;
       inline-size: 100%;
       max-inline-size: calc(100% - 2.5rem);
