--- a/packages/ibm-products-styles/src/components/FullPageError/_full-page-error.scss
+++ b/packages/ibm-products-styles/src/components/FullPageError/_full-page-error.scss
@@ -71,6 +71,10 @@ $block-class: #{c4p-settings.$pkg-prefix}--full-page-error;
   margin-block-end: $spacing-07;
 }
 
+.#{$block-class}__body {
+  @include type-style('body-02');
+}
+
 // safari rendering fix
 .#{$block-class}__svg-container svg.#{$block-class}__svg {
   inline-size: 100%;
