refactor(filter summary): decouple framer motion

--- a/packages/ibm-products-styles/src/components/FilterSummary/_filter-summary.scss
+++ b/packages/ibm-products-styles/src/components/FilterSummary/_filter-summary.scss
@@ -9,8 +9,15 @@
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/motion' as *;
+@use './animations' as *;
 
 $block-class: #{$pkg-prefix}--filter-summary;
+
+@property --panel-transform {
+  inherits: true;
+  initial-value: 16px;
+  syntax: '<length>';
+}
 
 .#{$block-class} {
   display: flex;
@@ -23,6 +30,10 @@ $block-class: #{$pkg-prefix}--filter-summary;
   inline-size: 100%;
   &.#{$block-class}__expanded {
     block-size: fit-content;
+  }
+  .#{$pkg-prefix}--tag-set__tag-container {
+    animation: filter-summary-enter $duration-moderate-01
+      motion(entrance, productive) forwards;
   }
 }
 
