fix: move number of tag controls to canvas

--- a/packages/ibm-products/src/global/js/hooks/_useOverflowItems.scss
+++ b/packages/ibm-products/src/global/js/hooks/_useOverflowItems.scss
@@ -5,10 +5,13 @@
  * LICENSE file in the root directory of this source tree.
  */
 
+.slider {
+  /* stylelint-disable-next-line carbon/layout-use */
+  margin-block-end: 1rem;
+}
+
 .parent {
   overflow: scroll;
-  /* stylelint-disable-next-line carbon/layout-use */
-  padding: 1rem;
   max-inline-size: 100%;
   scrollbar-width: none;
 }
