feat: adds open-wc/testing library (#6972)
* feat: adds open-wc/testing library

* chore(side-panel): coverts test to open-wc

* fix: resolve socket error in vitest config

---------

Co-authored-by: Afsal K <makafsal@gmail.com>

--- a/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_animations.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/addons/_animations.scss
@@ -27,14 +27,14 @@
 
 @keyframes filter-panel-entrance-left {
   0% {
-    width: 0;
+    inline-size: 0;
     opacity: 0;
     /* stylelint-disable-next-line carbon/layout-use */
     transform: translateX(calc(var(--panel-transform) * -1));
   }
 
   100% {
-    width: var(--panel-transform);
+    inline-size: var(--panel-transform);
     opacity: 1;
     transform: translateX(0);
   }
@@ -42,13 +42,13 @@
 
 @keyframes filter-panel-exit-left {
   0% {
-    width: var(--panel-transform);
+    inline-size: var(--panel-transform);
     opacity: 1;
     transform: translateX(0);
   }
 
   100% {
-    width: 0;
+    inline-size: 0;
     opacity: 0;
     /* stylelint-disable-next-line carbon/layout-use */
     transform: translateX(calc(var(--panel-transform) * -1));
