--- a/examples/carbon-for-ibm-products/CoachmarkOverlayElementsWithAnimatedMedia/src/SteppedAnimatedMedia/_index.scss
+++ b/examples/carbon-for-ibm-products/CoachmarkOverlayElementsWithAnimatedMedia/src/SteppedAnimatedMedia/_index.scss
@@ -6,3 +6,10 @@
 //
 
 @use './stepped-animated-media';
+
+.wrapper {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
