--- a/packages/ibm-products/src/components/CoachmarkOverlayElements/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/CoachmarkOverlayElements/_storybook-styles.scss
@@ -5,8 +5,8 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use '../../../../ibm-products-styles/src/global/styles/project-settings';
 @use '@carbon/styles/scss/spacing' as *;
+@use 'ALIAS_STORY_STYLE_CONFIG' as c4p-settings;
 
 // TODO: add any additional styles used by CoachmarkOverlayElements.stories.js
 .CoachmarkBaseExampleUsage {
@@ -17,4 +17,9 @@
   margin-inline-start: 50%;
   max-block-size: 100%;
   transform: translateX(-50%);
+}
+.#{c4p-settings.$pkg-prefix}--coachmark-overlay-elements__element-stepped-media
+  img {
+  block-size: 100%;
+  inline-size: 100%;
 }
