--- a/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
+++ b/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
@@ -5,4 +5,42 @@
 * LICENSE file in the root directory of this source tree.
 */
 
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/colors';
+@use '@carbon/styles/scss/type';
+@use '@carbon/styles/scss/components/tag';
+
 $story-prefix: 'overflow-handler-stories__';
+
+.slider {
+  margin-block-end: spacing.$spacing-05;
+}
+
+.parent {
+  overflow: scroll;
+  max-inline-size: 100%;
+  scrollbar-width: none;
+}
+
+.child {
+  white-space: nowrap;
+}
+
+// todo - create annotation component
+.annotation {
+  border: 1px dashed colors.$purple-40;
+}
+
+.annotation__label {
+  @include type.type-style('code-01');
+
+  display: inline-flex;
+  padding: spacing.$spacing-02;
+  background: tag.$tag-background-purple;
+  color: tag.$tag-color-purple;
+  column-gap: spacing.$spacing-02;
+}
+
+.annotation__content {
+  padding: spacing.$spacing-05;
+}
