--- a/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.scss
+++ b/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.scss
@@ -20,7 +20,7 @@ $css--plex: true !default;
 @use '@carbon/styles/scss/utilities';
 @use 'sass:map';
 
-@import '@carbon/ibm-products-styles/scss/components/UserAvatar';
+@use '@carbon/ibm-products-styles/scss/components/UserAvatar' as *;
 
 $prefix: 'c4p';
 $carbon-prefix: 'cds';
