--- a/packages/ibm-products-web-components/src/components/side-panel/side-panel.scss
+++ b/packages/ibm-products-web-components/src/components/side-panel/side-panel.scss
@@ -20,7 +20,8 @@ $css--plex: true !default;
 $prefix: 'c4p';
 $carbon-prefix: 'cds';
 @use '@carbon/ibm-products-styles/scss/components/SidePanel/_side-panel';
-@use '@carbon/ibm-products-styles/scss/components/ActionSet' as *;
+@use '@carbon/ibm-products-styles/scss/components/ActionSet/action-set.scss'
+  as *;
 @use '@carbon/ibm-products-styles/scss/components/SidePanel/side-panel-variables'
   as spv;
 
