--- a/packages/ibm-products-web-components/src/components/side-panel/side-panel.scss
+++ b/packages/ibm-products-web-components/src/components/side-panel/side-panel.scss
@@ -19,9 +19,10 @@ $css--plex: true !default;
 
 $prefix: 'c4p';
 $carbon-prefix: 'cds';
-@use '@carbon/ibm-products-styles/scss/components/SidePanel/_side-panel' as *;
-@use '@carbon/ibm-products-styles/scss/components/ActionSet/_action-set.scss'
+// @use '@carbon/ibm-products-styles/scss/components/SidePanel/index' as *;
+@use '../../../../ibm-products-styles/scss/components/SidePanel/_index.scss'
   as *;
+@use '@carbon/ibm-products-styles/scss/components/ActionSet/index' as *;
 @use '@carbon/ibm-products-styles/scss/components/SidePanel/side-panel-variables'
   as spv;
 
