fix: review requests

--- a/packages/ibm-products-web-components/src/components/full-page-error/full-page-error.scss
+++ b/packages/ibm-products-web-components/src/components/full-page-error/full-page-error.scss
@@ -8,8 +8,12 @@
 $css--plex: true !default;
 @use 'sass:map';
 
+@use '@carbon/styles/scss/reset';
+
 @use '@carbon/grid';
 @use '@carbon/ibm-products-styles/scss/components/FullPageError' as *;
+
+@use '@carbon/themes' as *;
 
 @include grid.css-grid();
 
