fix: https://github.com/carbon-design-system/ibm-products/issues/7067
move aria-sort to th on datagrid

--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_useSortableColumns.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_useSortableColumns.scss
@@ -11,6 +11,9 @@
 @use './variables' as *;
 
 .#{$block-class}__sortableColumn {
+  /* stylelint-disable-next-line declaration-no-important */
+  padding-inline: $spacing-05 !important;
+
   .#{c4p-settings.$carbon-prefix}--table-header-label .header-title {
     display: inline-block;
     inline-size: auto;
