fix: update story styles for interstitial view and viewmodule

--- a/packages/ibm-products/src/components/InterstitialScreen/_story-assets/InterstitialScreenView/_interstitial-screen-view.scss
+++ b/packages/ibm-products/src/components/InterstitialScreen/_story-assets/InterstitialScreenView/_interstitial-screen-view.scss
@@ -6,8 +6,7 @@
 //
 
 // Standard imports.
-@use '../../global/styles/project-settings' as c4p-settings;
-@use '../../global/styles/mixins';
+@use 'ALIAS_STORY_STYLE_CONFIG' as c4p-settings;
 
 // Other Carbon settings if needed
 // TODO: @use '@carbon/styles/scss/grid';
