--- a/packages/ibm-products/src/components/InterstitialScreen/_story-assets/InterstitialScreenViewModule/_interstitial-screen-view-module.scss
+++ b/packages/ibm-products/src/components/InterstitialScreen/_story-assets/InterstitialScreenViewModule/_interstitial-screen-view-module.scss
@@ -8,8 +8,7 @@
 /* stylelint-disable max-nesting-depth */
 
 // Standard imports.
-@use '../../global/styles/project-settings' as c4p-settings;
-@use '../../global/styles/mixins';
+@use 'ALIAS_STORY_STYLE_CONFIG' as c4p-settings;
 @use '@carbon/styles/scss/type';
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/breakpoint' as *;
