--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -75,6 +75,33 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
   }
 }
 
+$resizer-block-class: #{c4p-settings.$pkg-prefix}--resize-bar;
+
+.#{$resizer-block-class} {
+  background-color: $border-subtle-02;
+  // background-color: transparent;
+  transition: background-color $duration-moderate-01;
+
+  &:hover {
+    background-color: #0f62fe;
+  }
+
+  &:focus {
+    background-color: #0f62fe;
+    outline: none;
+  }
+
+  &--horizontal {
+    block-size: 0.2rem;
+    cursor: ns-resize;
+  }
+
+  &--vertical {
+    cursor: ew-resize;
+    inline-size: 0.2rem;
+  }
+}
+
 .#{$block-class} {
   --panel-transform: 320px;
   --#{$block-class}--title-stop: #{$spacing-05};
@@ -90,6 +117,7 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
   block-size: calc(100% - 3rem);
   color: $text-primary;
   /* if the title does not scroll then we have a child scrolling section. */
+  grid-template-columns: auto 1fr; /* resizer and the rest */
   grid-template-rows: auto 1fr auto; /* titles content and actions */
   inset-block-start: $spacing-09;
 
@@ -198,6 +226,12 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
     box-shadow:
       inset 0 -80px 70px -65px $ai-inner-shadow,
       0 4px 10px 2px $ai-drop-shadow;
+  }
+
+  &__resize-bar {
+    background-color: transparent;
+    grid-row: span 3 / span 3;
+    margin-inline-start: -0.2rem;
   }
 
   .#{$block-class}__header {
