--- a/packages/ibm-products-web-components/examples/import-modal/src/import-modal.scss
+++ b/packages/ibm-products-web-components/examples/import-modal/src/import-modal.scss
@@ -9,26 +9,18 @@ $css--plex: true !default;
 
 /* Other Carbon settings. */
 @use '@carbon/styles/scss/reset';
-@use '@carbon/styles/scss/breakpoint' as *;
-@use '@carbon/styles/scss/config' as *;
-@use '@carbon/styles/scss/motion' as *;
-@use '@carbon/styles/scss/spacing' as *;
-@use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/theme';
+@use '@carbon/styles/scss/themes';
 @use '@carbon/styles/scss/type';
-@use '@carbon/styles/scss/colors' as *;
-@use '@carbon/styles/scss/layout' as *;
+@use '@carbon/styles/scss/colors';
+@use '@carbon/styles/scss/layout';
 @use '@carbon/styles/scss/utilities';
 @use 'sass:map';
 
-@use '@carbon/ibm-products-styles/scss/components/ImportModal' as *;
+@use '@carbon/ibm-products-styles/scss/components/ImportModal';
 
-$prefix: 'c4p';
-$carbon-prefix: 'cds';
-
-$block-class: #{$prefix}--import-modal;
-
-:host(#{$prefix}--import-modal) {
-  .#{$block-class} {
-    @extend .#{$block-class};
-  }
+:root {
+  @include theme.theme(themes.$white);
+  background-color: var(--cds-background);
+  color: var(--cds-text-primary);
 }
