--- a/packages/ibm-products-web-components/src/components/import-modal/import-modal.scss
+++ b/packages/ibm-products-web-components/src/components/import-modal/import-modal.scss
@@ -30,5 +30,25 @@ $block-class: #{$prefix}--import-modal;
 :host(#{$prefix}--import-modal) {
   .#{$block-class} {
     @extend .#{$block-class};
+    @extend .#{$block-class}__helper-text;
+    @extend .#{$block-class}__file-container;
+    @extend .#{$block-class}__import-button;
+    @extend .#{$block-class}__input-group;
   }
 }
+
+// cds-modal cds-modal-body {
+//   .c4p--import-modal__input-group {
+//     .c4p--import-modal__import-button {
+//       margin-inline-start: 0.5rem;
+//     }
+//   }
+//   .c4p--import-modal__file-uploader-item {
+//     max-inline-size: none;
+//     margin-block-end: 0;
+//   }
+// }
+
+// cds-modal cds-modal-close-button {
+//   display: none;
+// }
