feat(importmodal): review changes

--- a/packages/ibm-products-web-components/examples/import-modal/src/import-modal.scss
+++ b/packages/ibm-products-web-components/examples/import-modal/src/import-modal.scss
@@ -13,7 +13,7 @@ $css--plex: true !default;
 @use '@carbon/styles/scss/type';
 @use '@carbon/styles/scss/colors';
 @use 'sass:map';
-
+@use '@carbon/styles';
 @use '@carbon/ibm-products-styles/scss/components/ImportModal';
 
 $prefix: 'c4p';
